--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,19 @@ jobs:
       - name: Go fmt check
         run: |
           test -z "$(gofmt -l .)"
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: latest
       - name: Go test
         run: go test ./...
+      - name: Go test with race detector
+        run: go test -race ./...
+      - name: Go test with coverage
+        run: go test -cover ./...
+      - name: Install govulncheck
+        run: go install golang.org/x/vuln/cmd/govulncheck@latest
+      - name: Run govulncheck
+        run: govulncheck ./...
       - name: Buf lint (placeholder)
         run: echo "buf lint to be configured in Phase 1"
